[gd_scene load_steps=4 format=2]

[ext_resource path="res://fighters/Global/Fighter.gd" type="Script" id=1]
[ext_resource path="res://fighters/Global/OffscreanEffect.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 30.0
height = 60.0

[node name="Fighter" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )
OffscreenEffectPath = NodePath("OffscreanEffect")
DeathTimerPath = NodePath("DeathTimer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 20, 20 )

[node name="OffscreanEffect" parent="." instance=ExtResource( 2 )]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="on_Offscreen"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_Death_timeout"]
